--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,44 @@
 @import "wireframe-zapdos-team/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding: 100px 0 95px;
+  }
+}
+
+.title {
+  text-transform: uppercase;
+}
+
+.title + .items-wrapper {
+
+  @media (min-width: 992px) {
+    margin-top: 80px;
+  }
+}
+
+.item {
+  &__inner {
+    padding: 0;
+    border: 0;
+  }
+
+  &__pic {
+    width: auto;
+    height: auto;
+    border-radius: 0;
+  }
+
+  &__title {
+
+    @media (min-width: 992px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__position {
+    font-size: var(--ui-text-size);
+  }
+}
