--- a/src/style.css
+++ b/src/style.css
@@ -36,31 +36,18 @@
   }
 
   &__item {
-    margin-bottom: 14px;
-    position: relative;
+    margin-bottom: 15px;
+    font-size: 0;
+  }
 
-    &::before {
-      content: " ";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-width: 1px;
-      border-style: solid;
-      border-color: var(--ui-dark-shade-color);
-      opacity: 0.2;
-    }
-
-    span {
-      display: none;
-    }
+  &__field {
+    font-size: var(--ui-text-size);
+    background-color: var(--ui-light-shade-color);
+    border: 1px solid var(--ui-link-hover-color);
+    margin-top: 0;
   }
 
   &__button {
     margin-top: 0;
   }
-
-  input {
-    background-color: var(--ui-light-shade-color);
-  }
-
 }
