--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,49 @@
 @import "wireframe-zapdos-blog/src/style.css";
 
 /* start here */
+
+.title {
+  text-transform: uppercase;
+  margin-bottom: 66px;
+
+  @media(min-width: 992px) {
+    text-align: left;
+  }
+}
+
+.article {
+  display: inline-flex;
+  flex-direction: column;
+
+  &__picture-wrapper {
+    order: 1;
+    margin-bottom: 27px;
+  }
+
+  &__picture {
+    padding-top: 75%;
+  }
+
+  &__title {
+    order: 2;
+    margin-bottom: 16px;
+  }
+
+  &__meta {
+    order: 3;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    order: 4;
+    margin-bottom: 19px;
+  }
+}
+
+.link {
+  order: 5;
+  text-align: left;
+  font-family: var(--ui-heading-font-family);
+  font-style: calc(var(--ui-heading-size) * 0.625);
+}
