--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 @import "wireframe-zapdos-why/src/style.css";
 
-/* start here */
+.item {
+  &__top-element {
+    width: 55px;
+    height: 55px;
+  }
+}
