--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
 @import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+
+.title {
+  text-transform: uppercase;
+}
+
+.section {
+  &__header {
+    margin-bottom: 67px;
+  }
+}
+
+.subheading {
+  font-size: var(--ui-heading-size);
+  font-family: var(--ui-heading-font-family);
+  max-width: 505px;
+}
+
+.text {
+  max-width: 635px;
+  text-align: center;
+}
