--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,59 @@
 @import "wireframe-series-2-cta/src/style.css";
 
 /* start here */
+.section {
+  &__inner {
+
+    @media (min-width: 768px) {
+      max-width: 570px;
+      border-radius: 0;
+    }
+  }
+
+  &__header {
+    padding: 0;
+  }
+
+  .title {
+    text-transform: uppercase;
+    margin-bottom: 36px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 70px;
+    }
+  }
+}
+
+.form {
+
+  @media (min-width: 480px) {
+    padding: 0;
+  }
+
+  &__item {
+    width: 100%;
+    font-size: 0;
+    margin-bottom: 16px;
+  }
+
+  &__field {
+    background-color: var(--ui-light-shade-color);
+    color: var(--ui-text-color);
+    font-size: var(--ui-text-size);
+    padding: 12px 14px;
+    height: 44px;
+    margin-top: 0;
+    border-radius: 0;
+    border: 1px solid #ececec;
+
+    &::placeholder {
+      color: currentColor;
+    }
+  }
+
+  &__button {
+    margin-top: 0;
+    box-shadow: none;
+    border: 0;
+  }
+}
