--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,58 @@
 @import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+.section {
+  padding-bottom: 390px;
+
+  @media (min-width: 480px) {
+    padding-bottom: 272px;
+  }
+
+  @media (min-width: 768px) {
+    padding-bottom: 228px;
+  }
+
+  @media (min-width: 992px) {
+    padding-top: 190px;
+    padding-bottom: 330px;
+  }
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__header {
+    order: 1;
+    margin-bottom: 75px;
+  }
+}
+
+.title {
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  margin-bottom: 60px;
+}
+
+.text {
+  order: 2;
+  text-align: center;
+  max-width: 742px;
+  opacity: 0.6;
+  margin-bottom: 45px;
+
+  br {
+    line-height: 2.5;
+  }
+}
+
+.heading {
+  order: 3;
+  margin-bottom: 15px;
+}
+
+.subheading {
+  order: 4;
+  max-width: 742px;
+  opacity: 0.6;
+}
