--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,38 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+
+.article {
+  display: block;
+  
+  &__title {
+    text-align: center;
+    text-transform: uppercase;
+    
+    @media (min-width: 768px) {
+      margin-bottom: 68px;
+    }
+  }
+  
+  &__picture-wrapper {
+    max-width: 100%;
+    
+    @media (min-width: 768px) {
+      margin-bottom: 30px;
+    }
+  }
+  
+  &__content {
+    max-width: 100%;
+  }
+  
+  &__picture {
+    padding-top: 40%;
+  }
+  
+  &__text {
+    max-width: 687px;
+    margin: auto;
+    text-align: center;
+  }
+}
