--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
 @import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 480px) {
+    padding: 100px 0 150px;
+  }
+
+  @media (min-width: 992px) {
+    padding: 200px 0 355px;
+  }
+
+  &__header {
+
+    @media (min-width: 992px) {
+      margin-bottom: 70px;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+
+  @media (min-width: 992px) {
+    font-size: var(--ui-heading-lg-size);
+  }
+}
+
+.text {
+  max-width: 750px;
+  text-align: center;
+  font-size: var(--ui-subtitle-size);
+}
