--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,65 @@
 @import "wireframe-series-1-partners/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 1200px) {
+    padding: 200px 0;
+  }
+
+  &__inner {
+    max-width: none;
+  }
+
+  &__header {
+
+    @media (min-width: 1200px) {
+      margin-bottom: 75px;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+}
+
+.item {
+  margin: 0 40px;
+  border-bottom-color: transparent;
+
+  @media (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+
+  &__picture-wrapper {
+    width: 155px;
+    height: 155px;
+  }
+
+  &__picture {
+    position: relative;
+    width: 155px;
+    height: 155px;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background-color: var(--ui-light-shade-color);
+      opacity: 0.1;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+
+  &__image {
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
