--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+
+.item {
+  margin-bottom: 33px;
+  
+  &__title {
+    margin-bottom: 16px;
+  }
+  
+  &__desc {
+    line-height: var(--ui-heading-line-height);
+
+    @media (min-width: 768px) {
+      padding: 0 40px;
+    }
+  }
+}
