--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @import "wireframe-zapdos-cover/src/style.css";
 
 /* start here */
+.subtitle {
+  font-size: var(--ui-subtitle-size);
+}
+
+.button {
+  margin-top: 0;
+  margin-bottom: 25px;
+}
