--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,35 @@
 @import "wireframe-zapdos-text/src/style.css";
 
 /* start here */
+.title {
+  text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    font-size: calc(var(--ui-block-title-size) * 1.75);
+  }
+}
+
+.typography__subheading.theme-dark {
+  color: #f2c3fd;
+}
+
+.section {
+  padding-bottom: 210px;
+
+  @media (min-width: 768px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  @media (min-width: 992px) {
+    padding-top: 178px;
+    padding-bottom: 339px;
+  }
+
+  &__header {
+
+    @media (min-width: 768px) {
+      margin-bottom: 57px;
+    }
+  }
+}
