--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@
 
     @media(min-width: 992px) {
       display: flex;
+      align-items: flex-start;
     }
   }
 }
@@ -52,12 +53,11 @@
   }
 
   @media(min-width: 992px) {
-    min-width: 500px;
-    max-width: 43%;
+    width: 500px;
     margin-left: 0;
     margin-right: 0;
-    flex-basis: 43%;
-    padding-bottom: 146px;
+    padding-bottom: 150px;
+    margin-bottom: 0;
   }
 
   &__content {
@@ -71,7 +71,7 @@
     }
 
     @media(min-width: 992px) {
-      max-width: 441px;
+      max-width: 440px;
     }
   }
 
@@ -149,10 +149,11 @@
 
   @media(min-width: 992px) {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex: 1;
     flex-wrap: wrap;
     padding-left: 40px;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 }
 
@@ -162,11 +163,16 @@
   margin-bottom: 40px;
 
   @media (min-width: 992px) {
-    width: calc(50% - 15px);
+    width: calc(50% - 30px);
     border-top: 1px solid #979797;
     padding-top: 5px;
-    margin-bottom: 0;
-    flex-basis: calc(50% - 15px);
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  &:nth-last-of-type(2):first-child,
+  &:nth-last-of-type(2):first-child ~ & {
+    width: 100%;
   }
 
   &__date {
