change item title font weight and letter spacing

--- a/src/style.css
+++ b/src/style.css
@@ -75,11 +75,12 @@
   }
 
   &__title {
-    letter-spacing: -1.6px;
+    letter-spacing: -1px;
 
     @media (min-width: 992px) {
       font-size: calc(var(--ui-heading-size));
       margin-bottom: 4px;
+      font-weight: 500;
     }
   }
 
