--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,24 @@
   max-width: 1060px;
   margin: 0 auto;
 
+  &__picture-wrapper {
+
+    @media (min-width: 768px) {
+      max-width: 44%;
+      flex-basis: 44%;
+    }
+  }
+
   &__picture {
     padding-top: 0;
     min-height: 0;
     background: transparent;
     width: 80%;
+    margin: 0 auto;
 
     @media (min-width: 768px) {
-      width: 39%;
+      width: 90%;
+      margin: 0;
     }
   }
 
@@ -45,5 +55,7 @@
 
 .article__picture img {
   position: static;
+  background: none;
+  height: auto;
 }
 
