--- a/src/style.css
+++ b/src/style.css
@@ -21,13 +21,7 @@
 
 .title {
   margin-bottom: 24px;
-  letter-spacing: 1.8px;
   margin-top: 30px;
-}
-
-.subtitle {
-  line-height: 1.75;
-  letter-spacing: 1.8px;
 }
 
 .plans {
@@ -53,9 +47,19 @@
     border-bottom-left-radius: 3px;
   }
 
+  &:nth-of-type(2) {
+    .button {
+      background-color: var(--ui-light-accent-color);
+    }
+  }
+
   &:nth-of-type(3) {
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
+
+    .button {
+      background-color: var(--ui-dark-accent-color);
+    }
   }
 
   &--main {
@@ -68,11 +72,13 @@
       margin-bottom: -40px;
       max-width: 370px;
       box-shadow: 0 2px 20px -6px var(--ui-link-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .plan {
       &__title {
-        font-weight: 700;
         margin-bottom: 40px;
       }
 
@@ -89,6 +95,8 @@
         @media (min-width: 768px) {
           position: static;
           transform: none;
+          margin-top: auto;
+          max-width: 75%;
         }
       }
     }
@@ -96,7 +104,6 @@
 
   &__title {
     margin-bottom: 30px;
-    letter-spacing: 1px;
   }
 
   &__icon {
@@ -115,22 +122,9 @@
 
   &__price {
     margin-bottom: 20px;
-
-    text-transform: uppercase;
     font-size: var(--ui-small-text-size);
     color: var(--ui-text-color);
     font-weight: 700;
-    letter-spacing: 0.5px;
-    line-height: var(--ui-heading-line-height);
-
-    &-count {
-      line-height: 1.78;
-      letter-spacing: 0.8px;
-      font-family: var(--ui-heading-large-font-family);
-      font-size: var(--ui-sub-heading-size);
-      font-weight: var(--ui-heading-large-font-weight);
-      color: var(--ui-heading-lg-color);
-    }
   }
 
   &__list {
@@ -140,8 +134,6 @@
       font-size: calc(var(--ui-small-text-size) * 1.166);
       font-family: var(--ui-text-font-family);
       font-weight: var(--ui-text-font-weight);
-      line-height: 2;
-      letter-spacing: 1.5px;
       margin-bottom: 3px;
     }
   }
@@ -155,14 +147,4 @@
       transform: translate(-50%, 50%);
     }
   }
-}
-
-.button {
-  font-weight: 700;
-  letter-spacing: 1.2px;
-
-  &:nth-of-type(2) {
-    color: #000;
-  }
-
 }
