--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,69 @@
 @import "wireframe-series-2-services/src/style.css";
 
 /* start here */
+
+.title {
+  text-transform: uppercase;
+  position: relative;
+  color: var(--ui-light-shade-color);
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 22px;
+    background-color: var(--ui-brand-color);
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -19px;
+  }
+}
+
+.articles-wrapper {
+  margin-top: 70px;
+}
+
+.article {
+  &__content {
+    text-align: left;
+  }
+
+  &__title {
+    position: relative;
+    text-align: left;
+    padding-left: 70px;
+  }
+
+  &:first-child h2,
+  &:last-child h2 {
+    &::before {
+      content: "01";
+      position: absolute;
+      top: 0;
+      left: 0;
+      color: var(--ui-brand-color);
+    }
+
+    &:last-child h2 {
+      &::before {
+        content: "02";
+      }
+    }
+
+    &:first-child::after {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 4px;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 35px;
+      background: var(--ui-brand-color);
+    }
+  }
+
+  &__text {
+    max-width: 240px;
+  }
+}
+
