--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,73 @@
 @import "wireframe-series-2-partners/src/style.css";
 
-/* start here */
+.section .subtitle {
+  color: #939696;
+  font-weight: 600;
+}
+
+.title {
+  margin-bottom: 35px;
+  letter-spacing: -1px;
+}
+
+.items-wrapper {
+
+  @media (min-width: 992px) {
+    margin-top: 100px;
+  }
+}
+
+.item {
+  &__container {
+    border-width: 0;
+    background-color: #f7f7f7;
+
+    @media (min-width: 992px) {
+      padding-left: 30px;
+      padding-right: 30px;
+      position: relative;
+    }
+  }
+
+  &__pic-wrapper {
+
+    @media (min-width: 992px) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      width: 100px;
+      height: 100px;
+    }
+  }
+
+  &__image {
+
+    @media (min-width: 992px) {
+      top: -180px;
+    }
+  }
+}
+
+.item .item__desc {
+
+  @media (min-width: 992px) {
+    margin-top: 45px;
+    margin-bottom: 25px;
+    font-size: var(--ui-text-size);
+    font-weight: 400;
+    color: #4d4f4f;
+  }
+}
+
+.item__link-wrapper .button .button__content {
+  text-decoration: underline;
+  text-transform: none;
+  font-size: calc(var(--ui-text-size) / 1.14);
+}
+
+.btns-group {
+
+  @media (min-width: 992px) {
+    padding-top: 50px;
+  }
+}
