--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,81 @@
 @import "wireframe-series-2-services/src/style.css";
 
-/* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 45px;
+  }
+
+  &__inner {
+
+    @media (min-width: 992px) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+}
+
+.title {
+  letter-spacing: -1px;
+}
+
+.article {
+  &:first-child {
+    margin-right: -1px;
+
+    .article__picture {
+      background-color: var(--ui-dark-shade-color);
+    }
+  }
+
+  @media (min-width: 992px) {
+    justify-content: flex-start;
+    min-height: 580px;
+    padding-top: 175px;
+  }
+
+  &__picture {
+    background-color: #424444;
+  }
+
+  &__content {
+    .article__title {
+      color: var(--ui-light-shade-color);
+    }
+
+    .article__text {
+      color: var(--ui-light-shade-color);
+    }
+  }
+
+  &__title {
+    font-weight: 500;
+    letter-spacing: -1px;
+
+    @media (min-width: 992px) {
+      margin-bottom: 15px;
+    }
+  }
+
+  &__text {
+    margin-bottom: 20px;
+    line-height: 25px;
+    text-align: center;
+    opacity: 0.8;
+
+    @media (min-width: 992px) {
+      max-width: 320px;
+      margin-top: 0;
+      margin-bottom: 15px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+.btns-group {
+
+  @media (min-width: 992px) {
+    padding-top: 55px;
+  }
+}
