--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@
     border-top: 0;
     margin-top: 0;
     padding-bottom: 17px;
+
+    &:before {
+      display: none;
+    }
   }
 
   &__meta {
