--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 
 .section .subtitle {
   color: #939696;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .title {
@@ -25,6 +25,7 @@
     @media (min-width: 992px) {
       padding-left: 30px;
       padding-right: 30px;
+      padding-bottom: 55px;
       position: relative;
     }
   }
@@ -59,7 +60,7 @@
   }
 }
 
-.item__link-wrapper .button .button__content {
+.link {
   text-decoration: underline;
   text-transform: none;
   font-size: calc(var(--ui-text-size) / 1.14);
