--- a/src/style.css
+++ b/src/style.css
@@ -9,16 +9,12 @@
   }
 }
 
-.typography__subheading.theme-dark {
-  color: #f2c3fd;
-}
-
 .section {
-  padding-bottom: 210px;
+  padding-bottom: 280px;
 
   @media (min-width: 768px) {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 339px;
   }
 
   @media (min-width: 992px) {
@@ -32,4 +28,14 @@
       margin-bottom: 57px;
     }
   }
+}
+
+.subheading {
+  max-width: 590px;
+  margin-bottom: 3px;
+}
+
+.text {
+  max-width: 772px;
+  text-align: center;
 }
